--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "firebase deploy --only hosting"
+    "deploy:prod": "firebase deploy --only hosting",
+    "deploy:test": "firebase deploy --only hosting:testlinkreach"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
